Add autofocused setting

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -68,18 +68,23 @@
       </div>
     </div>
 
-    <!-- <div class="settings-section">
+    <div class="settings-section">
       <div class="settings-section-title-container">
-        <svg class="settings-chevron-down-icon settings-chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+        <svg class="settings-chevron-right-icon settings-chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
           <path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
         </svg>
         <p class="settings-section-title">Search</p>
       </div>
 
-      <div class="settings-section-content"></div>
+      <div class="settings-section-content">
+        <div class="search-setting-option">
+          <p class="search-setting-label">Autofocused Search Input</p>
+          <input type="checkbox" id="searchAutofocused" /><label for="searchAutofocused">Toggle</label>
+        </div>
+      </div>
     </div>
 
-    <div class="settings-section">
+    <!-- <div class="settings-section">
       <div class="settings-section-title-container">
         <svg class="settings-chevron-down-icon settings-chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
           <path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
