Rename working files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="popup.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="./icons/icon.png" type="image/x-icon">
   <title>SH</title>
 </head>
@@ -88,6 +88,6 @@
 
   <p class="clock" id="clock"></p>
   <input class="search" id="search" placeholder="Search" />
-  <script src="popup.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
