--- a/index.html
+++ b/index.html
@@ -1,93 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
-  <title>SH</title>
-</head>
-<body>
-  <svg class="settings-icon" id="settingsIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-    <path d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z" />
-  </svg>
-  
-  <section class="settings-panel" id="settingsPanel">
-    <h2 class="settings-label">Settings</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon" />
+    <title>SH</title>
+  </head>
+  <body>
+    <div class="background"></div>
 
-    <div class="settings-section">
-      <div class="settings-section-title-container">
-        <svg class="settings-chevron-right-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-          <path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
-        </svg>
-        <p class="settings-section-title">Theme</p>
+    <svg
+      class="settings-icon"
+      id="settingsIcon"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 512 512"
+    >
+      <path
+        d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z"
+      />
+    </svg>
+
+    <section class="settings-panel" id="settingsPanel">
+      <h2 class="settings-label">Settings</h2>
+
+      <div class="settings-section">
+        <div class="settings-section-title-container">
+          <svg
+            class="settings-chevron-right-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+          >
+            <path
+              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
+            />
+          </svg>
+          <p class="settings-section-title">Theme</p>
+        </div>
+
+        <div class="settings-section-content">
+          <p class="settings-sub-section-label">Presets</p>
+          <div class="themes-content">
+            <div
+              class="theme-preset"
+              style="background-color: #000000; border-color: #ffffff"
+            >
+              <p class="theme-preset-text" style="color: #ffffff">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
+              style="background-color: #000000; border-color: #a9a9a9"
+            >
+              <p class="theme-preset-text" style="color: #a9a9a9">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
+              style="background-color: #000000; border-color: #36454f"
+            >
+              <p class="theme-preset-text" style="color: #36454f">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
+              style="background-color: #000000; border-color: #0096ff"
+            >
+              <p class="theme-preset-text" style="color: #0096ff">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
+              style="background-color: #000000; border-color: #ff3131"
+            >
+              <p class="theme-preset-text" style="color: #ff3131">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
+              style="background-color: #000000; border-color: #4cbb17"
+            >
+              <p class="theme-preset-text" style="color: #4cbb17">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
+              style="background-color: #000000; border-color: #ffa500"
+            >
+              <p class="theme-preset-text" style="color: #ffa500">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
+              style="background-color: #36454f; border-color: #ffffff"
+            >
+              <p class="theme-preset-text" style="color: #ffffff">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
+              style="background-color: #353935; border-color: #ffffff"
+            >
+              <p class="theme-preset-text" style="color: #ffffff">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
+              style="background-color: #28282b; border-color: #ffffff"
+            >
+              <p class="theme-preset-text" style="color: #ffffff">OK? OK!</p>
+            </div>
+
+            <div style="width: 218px"></div>
+          </div>
+
+          <p class="settings-sub-section-label">Opacity</p>
+          <div class="search-setting-option">
+            <p class="search-setting-label" id="textOpacityLabel">Text opacity (100%)</p>
+            <div class="opacity-range-container">
+              <p>10%</p>
+              <input type="range" min="10" max="100" class="opacity-range" id="textOpacityRange"/>
+              <p>100%</p>
+            </div>
+          </div>
+
+          <div class="search-setting-option">
+            <p class="search-setting-label" id="backgroundOpacityLabel">Background opacity (100%)</p>
+            <div class="opacity-range-container">
+              <p>0%</p>
+              <input type="range" min="0" max="100" class="opacity-range" id="backgroundOpacityRange"/>
+              <p>100%</p>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="settings-section-content themes-content">
-        <div class="theme-preset" style="background-color: #000000; border-color: #FFFFFF">
-          <p class="theme-preset-text" style="color: #FFFFFF">OK? OK!</p>
+      <div class="settings-section">
+        <div class="settings-section-title-container">
+          <svg
+            class="settings-chevron-right-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+          >
+            <path
+              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
+            />
+          </svg>
+          <p class="settings-section-title">Search</p>
         </div>
 
-        <div class="theme-preset" style="background-color: #000000; border-color: #A9A9A9">
-          <p class="theme-preset-text" style="color: #A9A9A9">OK? OK!</p>
-        </div>
-
-        <div class="theme-preset" style="background-color: #000000; border-color: #36454F">
-          <p class="theme-preset-text" style="color: #36454F">OK? OK!</p>
-        </div>
-
-        <div class="theme-preset" style="background-color: #000000; border-color: #0096FF">
-          <p class="theme-preset-text" style="color: #0096FF">OK? OK!</p>
-        </div>
-
-        <div class="theme-preset" style="background-color: #000000; border-color: #FF3131">
-          <p class="theme-preset-text" style="color: #FF3131">OK? OK!</p>
-        </div>
-
-        <div class="theme-preset" style="background-color: #000000; border-color: #4cbb17">
-          <p class="theme-preset-text" style="color: #4cbb17">OK? OK!</p>
-        </div>
-
-        <div class="theme-preset" style="background-color: #000000; border-color: #FFA500">
-          <p class="theme-preset-text" style="color: #FFA500">OK? OK!</p>
-        </div>
-
-        <div class="theme-preset" style="background-color: #36454F; border-color: #FFFFFF">
-          <p class="theme-preset-text" style="color: #FFFFFF">OK? OK!</p>
-        </div>
-
-        <div class="theme-preset" style="background-color: #353935; border-color: #FFFFFF">
-          <p class="theme-preset-text" style="color: #FFFFFF">OK? OK!</p>
-        </div>
-
-        <div class="theme-preset" style="background-color: #28282B; border-color: #FFFFFF">
-          <p class="theme-preset-text" style="color: #FFFFFF">OK? OK!</p>
-        </div>
-
-        <div style="width: 218px;"></div>
-      </div>
-    </div>
-
-    <div class="settings-section">
-      <div class="settings-section-title-container">
-        <svg class="settings-chevron-right-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-          <path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
-        </svg>
-        <p class="settings-section-title">Search</p>
-      </div>
-
-      <div class="settings-section-content">
-        <div class="search-setting-option">
-          <p class="search-setting-label">Autofocused Search Input</p>
-          <input data-toggle type="checkbox" id="searchAutofocused" /><label for="searchAutofocused">Toggle</label>
+        <div class="settings-section-content">
+          <div class="search-setting-option">
+            <p class="search-setting-label">Autofocused Search Input</p>
+            <input data-toggle type="checkbox" id="searchAutofocused" /><label
+              for="searchAutofocused"
+              >Toggle</label
+            >
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <p class="clock" id="clock"></p>
-  <input class="search" id="search" placeholder="Search" />
-  <script src="script.js" defer></script>
-</body>
+    <p class="clock" id="clock"></p>
+    <input class="search" id="search" placeholder="Search" />
+    <script src="script.js" defer></script>
+  </body>
 </html>
