Add additional theme presets

--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
 
             <div
               class="theme-preset"
+              style="background-color: #000000; border-color: #FC6C85"
+            >
+              <p class="theme-preset-text" style="color: #FC6C85">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
+              style="background-color: #000000; border-color: #6A0DAD"
+            >
+              <p class="theme-preset-text" style="color: #6A0DAD">OK? OK!</p>
+            </div>
+
+            <div
+              class="theme-preset"
               style="background-color: #000000; border-color: #4cbb17"
             >
               <p class="theme-preset-text" style="color: #4cbb17">OK? OK!</p>
@@ -90,6 +104,13 @@
             >
               <p class="theme-preset-text" style="color: #ffa500">OK? OK!</p>
             </div>
+
+            <div
+            class="theme-preset"
+            style="background-color: #000000; border-color: #ffdf00"
+          >
+            <p class="theme-preset-text" style="color: #ffdf00">OK? OK!</p>
+          </div>
 
             <div
               class="theme-preset"
@@ -112,24 +133,40 @@
               <p class="theme-preset-text" style="color: #ffffff">OK? OK!</p>
             </div>
 
-            <div style="width: 218px"></div>
+            <div style="width: 210px"></div>
           </div>
 
           <p class="settings-sub-section-label">Opacity</p>
           <div class="search-setting-option">
-            <p class="search-setting-label" id="textOpacityLabel">Text opacity (100%)</p>
+            <p class="search-setting-label" id="textOpacityLabel">
+              Text opacity (100%)
+            </p>
             <div class="opacity-range-container">
               <p>10%</p>
-              <input type="range" min="10" max="100" class="opacity-range" id="textOpacityRange"/>
+              <input
+                type="range"
+                min="10"
+                max="100"
+                class="opacity-range"
+                id="textOpacityRange"
+              />
               <p>100%</p>
             </div>
           </div>
 
           <div class="search-setting-option">
-            <p class="search-setting-label" id="backgroundOpacityLabel">Background opacity (100%)</p>
+            <p class="search-setting-label" id="backgroundOpacityLabel">
+              Background opacity (100%)
+            </p>
             <div class="opacity-range-container">
               <p>0%</p>
-              <input type="range" min="0" max="100" class="opacity-range" id="backgroundOpacityRange"/>
+              <input
+                type="range"
+                min="0"
+                max="100"
+                class="opacity-range"
+                id="backgroundOpacityRange"
+              />
               <p>100%</p>
             </div>
           </div>
