Add inputs for custom colors

--- a/index.html
+++ b/index.html
@@ -135,7 +135,17 @@
 
             <div style="width: 210px"></div>
           </div>
-
+          <p class="settings-sub-section-label">Custom colors</p>
+          <div class="color-pickers">
+            <p class="search-setting-label">
+              Background color
+              <input type="color" name="bg-color" id="bg-color">
+            </p>
+            <p class="search-setting-label">
+              Foreground color
+              <input type="color" name="fg-color" id="fg-color">
+            </p>
+          </div>
           <p class="settings-sub-section-label">Opacity</p>
           <div class="search-setting-option">
             <p class="search-setting-label" id="textOpacityLabel">
