Populate custom color inputs on theme change/reload.

--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
 
             <div
               class="theme-preset"
-              style="background-color: #000000; border-color: #FC6C85"
+              style="background-color: #000000; border-color: #fc6c85"
             >
-              <p class="theme-preset-text" style="color: #FC6C85">OK? OK!</p>
+              <p class="theme-preset-text" style="color: #fc6c85">OK? OK!</p>
             </div>
 
             <div
               class="theme-preset"
-              style="background-color: #000000; border-color: #6A0DAD"
+              style="background-color: #000000; border-color: #6a0dad"
             >
-              <p class="theme-preset-text" style="color: #6A0DAD">OK? OK!</p>
+              <p class="theme-preset-text" style="color: #6a0dad">OK? OK!</p>
             </div>
 
             <div
@@ -106,11 +106,11 @@
             </div>
 
             <div
-            class="theme-preset"
-            style="background-color: #000000; border-color: #ffdf00"
-          >
-            <p class="theme-preset-text" style="color: #ffdf00">OK? OK!</p>
-          </div>
+              class="theme-preset"
+              style="background-color: #000000; border-color: #ffdf00"
+            >
+              <p class="theme-preset-text" style="color: #ffdf00">OK? OK!</p>
+            </div>
 
             <div
               class="theme-preset"
@@ -135,17 +135,19 @@
 
             <div style="width: 210px"></div>
           </div>
+
           <p class="settings-sub-section-label">Custom colors</p>
           <div class="color-pickers">
-            <p class="search-setting-label">
-              Background color
-              <input type="color" name="bg-color" id="bg-color">
-            </p>
-            <p class="search-setting-label">
-              Foreground color
-              <input type="color" name="fg-color" id="fg-color">
-            </p>
+            <div class="color-picker-container">
+              <p class="search-setting-label">Background color</p>
+              <input type="color" name="bg-color" id="bg-color" />
+            </div>
+            <div class="color-picker-container">
+              <p class="search-setting-label">Text color</p>
+              <input type="color" name="fg-color" id="fg-color" />
+            </div>
           </div>
+
           <p class="settings-sub-section-label">Opacity</p>
           <div class="search-setting-option">
             <p class="search-setting-label" id="textOpacityLabel">
