Add the four most used search engines as options

--- a/index.html
+++ b/index.html
@@ -207,6 +207,16 @@
               >Toggle</label
             >
           </div>
+
+          <div class="search-setting-option">
+            <p class="search-setting-label">Search engine</p>
+            <div class="search-icons-container">
+              <img src="icons/google.svg" alt="Google search engine" class="search-engine-icon" data-name="Google">
+              <img src="icons/duckduckgo.svg" alt="DuckDuckGo search engine" class="search-engine-icon" data-name="DuckDuckGo" >
+              <img src="icons/bing.svg" alt="Bing search engine" class="search-engine-icon" data-name="Bing" >
+              <img src="icons/yahoo.svg" alt="Yahoo search engine" class="search-engine-icon" data-name="Yahoo" >
+            </div>
+          </div>
         </div>
       </div>
     </section>
