Add new search input design

--- a/index.html
+++ b/index.html
@@ -222,7 +222,10 @@
     </section>
 
     <p class="clock" id="clock"></p>
-    <input class="search" id="search" placeholder="Search" />
+    <div class="search-container">
+      <input class="search" id="search" />
+      <p class="search-label">Search</label>
+    </div>
     <script src="script.js" defer></script>
   </body>
 </html>
