--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
           <div class="color-pickers">
             <div class="color-picker-container">
               <p class="search-setting-label">Background color</p>
-              <input type="color" name="bg-color" id="bg-color" />
+              <input type="color" name="bg-color" id="backgroundColorCustomInput" class="background-color-custom-input" />
             </div>
             <div class="color-picker-container">
               <p class="search-setting-label">Text color</p>
-              <input type="color" name="fg-color" id="fg-color" />
+              <input type="color" name="fg-color" id="textColorCustomInput" class="text-color-custom-input" />
             </div>
           </div>
 
