Fix panel left expanded

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </svg>
     </span>
 
-    <section class="settings-panel settings-panel--expanded" id="settingsPanel">
+    <section class="settings-panel" id="settingsPanel">
       <h2 class="settings-label">Settings</h2>
 
       <div class="settings-section">
@@ -439,7 +439,7 @@
         </div>
 
         <div
-          class="settings-section-content settings-section-content--expanded"
+          class="settings-section-content"
         >
           <p class="settings-sub-section-label">Type</p>
           <div class="layouts-container">
