--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </svg>
     </span>
 
-    <section class="settings-panel" id="settingsPanel">
+    <section class="settings-panel settings-panel--expanded" id="settingsPanel">
       <h2 class="settings-label">Settings</h2>
 
       <div class="settings-section">
@@ -439,7 +439,7 @@
         </div>
 
         <div
-          class="settings-section-content"
+          class="settings-section-content settings-section-content--expanded"
         >
           <p class="settings-sub-section-label">Type</p>
           <div class="layouts-container">
@@ -463,7 +463,8 @@
             </div>
           </div>
           <p class="settings-sub-section-label">Presets</p>
-          <div class="themes-content" id="themeContent"></div>
+          <div class="themes-content" id="themeContent">
+          </div>
 
           <p class="settings-sub-section-label">Custom colors</p>
           <div class="color-pickers">
