Change Search input design and settings panel background

--- a/index.html
+++ b/index.html
@@ -438,9 +438,7 @@
           <p class="settings-section-title">Theme</p>
         </div>
 
-        <div
-          class="settings-section-content"
-        >
+        <div class="settings-section-content">
           <p class="settings-sub-section-label">Type</p>
           <div class="layouts-container">
             <div class="theme-layout" data-theme-type="Minimal">
@@ -463,8 +461,7 @@
             </div>
           </div>
           <p class="settings-sub-section-label">Presets</p>
-          <div class="themes-content" id="themeContent">
-          </div>
+          <div class="themes-content" id="themeContent"></div>
 
           <p class="settings-sub-section-label">Custom colors</p>
           <div class="color-pickers">
@@ -594,8 +591,7 @@
     <section class="clock-and-search-section" id="clockAndSearchSection">
       <p class="clock" id="clock"></p>
       <div class="search-container">
-        <input class="search" id="search" />
-        <label class="search-label" for="search">Search</label>
+        <input class="search" id="search" placeholder="Search something amazing" />
       </div>
     </section>
 
