Remove opacity options

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </div>
           </div>
 
-          <p class="settings-sub-section-label">Opacity</p>
+          <!-- <p class="settings-sub-section-label">Opacity</p>
           <div class="search-setting-option">
             <p class="search-setting-label" id="textOpacityLabel">
               Text opacity (100%)
@@ -518,7 +518,7 @@
               />
               <p>100%</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
