Add different fonts support

--- a/index.html
+++ b/index.html
@@ -485,40 +485,16 @@
             </div>
           </div>
 
-          <!-- <p class="settings-sub-section-label">Opacity</p>
+          <p class="settings-sub-section-label">Font</p>
           <div class="search-setting-option">
-            <p class="search-setting-label" id="textOpacityLabel">
-              Text opacity (100%)
-            </p>
-            <div class="opacity-range-container">
-              <p>10%</p>
-              <input
-                type="range"
-                min="10"
-                max="100"
-                class="opacity-range"
-                id="textOpacityRange"
-              />
-              <p>100%</p>
-            </div>
+            <select class="fonts-select" id="fontsSelect">
+              <option value="Roboto">Roboto</option>
+              <option value="Open Sans">Open Sans</option>
+              <option value="Ubuntu">Ubuntu</option>
+              <option value="Rubik">Rubik</option>
+            </select>
           </div>
 
-          <div class="search-setting-option">
-            <p class="search-setting-label" id="backgroundOpacityLabel">
-              Background opacity (100%)
-            </p>
-            <div class="opacity-range-container">
-              <p>0%</p>
-              <input
-                type="range"
-                min="0"
-                max="100"
-                class="opacity-range"
-                id="backgroundOpacityRange"
-              />
-              <p>100%</p>
-            </div>
-          </div> -->
         </div>
       </div>
 
