--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
     <title>SH</title>
   </head>
   <body>
