Add initial mobile view

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="settings-panel" id="settingsPanel">
       <h2 class="settings-label">Settings</h2>
 
-      <div class="settings-section">
+      <div class="settings-section invisible-in-mobile">
         <div class="settings-section-title-container">
           <svg
             class="settings-chevron-right-icon"
@@ -498,7 +498,7 @@
         </div>
       </div>
 
-      <div class="settings-section">
+      <div class="settings-section invisible-in-mobile">
         <div class="settings-section-title-container">
           <svg
             class="settings-chevron-right-icon"
@@ -571,6 +571,7 @@
           class="search"
           id="search"
           placeholder="Search something amazing"
+          autocomplete="off"
         />
       </div>
     </section>
